Spacing fixes

--- a/css/browser.css
+++ b/css/browser.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #05152f;
     position: relative;
-    width: 98%;
+    width: -webkit-calc(100% - 30px);
     margin-left: auto;
     margin-right: auto;
 }
